attempt to fix white gap 3

--- a/a2/style.css
+++ b/a2/style.css
@@ -55,6 +55,8 @@ html, body {
 /*Chessboard Style Settings Margaret Khamvongsa*/
 #container {
   margin-top: 10%;
+  margin-left: 0 auto;
+  margin-right: 0 auto;
 }
 
 /*Footer Margaret Khamvongsa*/
